Fix playlist header spacing

--- a/app/assets/stylesheets/playlist_show.scss
+++ b/app/assets/stylesheets/playlist_show.scss
@@ -55,7 +55,7 @@
 
   p:last-child {
     position: absolute;
-    right: 50px;
+    right: 55px;
   }
 }
 
